--- a/french-soup/styles/style.css
+++ b/french-soup/styles/style.css
@@ -1,9 +1,99 @@
-/*Some necessary adjustments*/
-h1, body, html, main {
-  margin: 0;
-}
-/*Import the font and set the default size*/
+/* CSS RESET - do not remove */
+/* Reset default browser styles and provide a consistent starting point */
 html {
-  font-family: 'Open Sans', sans-serif;
-  font-size: 18px
+  box-sizing: border-box;
+  font-size: 1rem;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+/*  Set the font */
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  color: rgb(56, 56, 56)
+}
+
+hr {
+  margin: 0 2rem;
+}
+
+/* STYLES */
+/* Write your CSS below */
+
+#banner {
+  background-image: url(/apple-pie/images/apple-pie.jpg);
+  background-size: cover;
+  height: 24rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#bannerSoup {
+  background-image: url(/french-soup/images/soup.jpg);
+  background-size: cover;
+  height: 24rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#bannerSoup h1 {
+  color: white;
+  text-align: center;
+  font-weight: 200;
+  font-size: 3rem;
+}
+
+#description {
+  text-align: center;
+  padding: 1rem 2rem;
+}
+
+#description p {
+  padding-top: 2rem;
+  font-weight: 400;
+}
+
+#description img {
+  height: 4em;
+  margin-top: 1rem;
+}
+
+#recipe {
+  padding: 1rem 2rem;
+}
+
+#recipe h3 {
+  margin-left: 2rem;
+}
+
+#recipe ul{
+  list-style-type:disc;
+}
+
+#recipe img{
+  height: 5em;
+  margin-top: 1rem;
+  text-align: center;
+}
+
+.container {
+  text-align: center;
+}
+
+#directions {
+  padding: 1rem 2rem;
+}
+
+#directions h3 {
+  margin-left: 2rem;
+}
+
+#directions ul{
+  list-style-type: decimal;
 }
